# pharmaceutical-rag-knowledge-expert

./: .env  .env.example  .env.integration.example  .env.local  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MCP_INTEGRATION.md  Makefile  QUICK_START.md  README.md  SECURITY.md  SETUP_GUIDE.md  VERIFICATION_COMMENTS_IMPLEMENTATION_SUMMARY.md  VERIFICATION_COMMENTS_IMPLEMENTATION_SUMMARY_ROUND2.md  WEB_INTERFACE_GUIDE.md  agent_integration.py  claude-nemo-migration-plan.md  compose-mock.yaml  compose-ngc.yaml  docker-compose.yml  easyapi-pubmed-integration.md  easyapi-pubmed-optimization-guide.md  main.py  mcp_config.json  mkdocs.yml  nemo-guardrails-pharmaceutical-safety.md  nemo_environment_validator.py  nemo_validation_report_20250921_194449.json  performance_validation_summary.md  phase1-rate-limiting-caching.md  prompt_generator.py  (+15 more)
.claude/agents/: ai-engineer-preflight.md  ai-engineer.md  devops-troubleshooter.md  fullstack-developer.md  test-engineer.md
.github/: CODEOWNERS  TEMPLATE_VALIDATION.md  labeler.yml  pull_request_template.md
.github/workflows/: docs.yml  (+10 more)
Data/: cyp_roles.csv  drugs_brand.txt  drugs_generic.txt  mesh_therapeutic_areas.json
benchmarks/: README.md  adverse_reactions_v1.json  benchmarks_manifest.yaml  clinical_terminology_v1.json  drug_interactions_v1.json  mechanism_of_action_v1.json  pharmacokinetics_v1.json  test_dual_v1.json
config/: alerts.yaml  benchmark_presets.yaml  benchmarks.yaml  test_automation.yml
docs/: API_INTEGRATION_GUIDE.md  API_REFERENCE.md  API_REFERENCE_OLD.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CHEAPEST_DEPLOYMENT.md  CODE_OF_CONDUCT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  EXAMPLES.md  EXAMPLES_OLD.md  FEATURES.md  FREE_TIER_MAXIMIZATION.md  MAINTAINERS.md  NEMO_PIPELINE_GUIDE.md  NGC_DEPRECATION_IMMUNITY.md  NVIDIA_BUILD_SELF_HOSTED_NIM.md  NVIDIA_MODEL_ACCESS_GUIDE.md  PHARMACEUTICAL_BEST_PRACTICES.md  QUICK_START.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING_GUIDE.md  TROUBLESHOOTING_NVIDIA_BUILD.md  index.md  week2_refined_plan.md
examples/: example_usage.py  usage_example.py
guardrails/: __init__.py  actions.py  config.yml  constants.py  prompts.yml
optimization_validation/: latest_optimization_validation.json  optimization_validation_20250924_012230.json
portfolio/: README.md
scripts/: ai_preflight.py  ai_smoke_test.py  api_key_diagnostics.py  audit_ngc_dependencies.sh  benchmarks_report.py  check_deps.py  colab_persistence.py  config_validator.py  csv_validator.py  current_endpoints_test.py  docs_linkcheck.py  docs_metadata_validator.py  docs_toc_generator.py  env_local_rerank.sh  final_system_validation.py  generate_pharmaceutical_benchmarks.py  gh_actions_logs.sh  gh_actions_runs.sh  gh_auth_check.sh  gh_code_search.sh  gh_dependabot_alerts.sh  gh_file_get.sh  gh_issue_create.sh  gh_issue_list.sh  gh_pr_comment.sh  gh_pr_list.sh  gh_wrap.sh  git_history_cleanup.sh  identify_secrets_in_history.sh  model_validation_utility.py  nemo_environment_validator.py  new-adr.sh  nim_native_test.py  nvidia_build_api_test.py  nvidia_build_rerank_test.py  ollama_smoke_cli.py  openai_format_test.py  orchestrate_benchmarks.py  performance_monitor.py  pharma_benchmarks_cli.py  (+21 more)
src/: __init__.py  cache_management.py  ddi_pk_processor.py  document_loader.py  embedding_performance_monitor.py  enhanced_config.py  enhanced_pubmed_agent.py  enhanced_pubmed_scraper.py  enhanced_rag_agent.py  enhanced_vector_database.py  mcp_documentation_context.py  medical_guardrails.py  multi_model_embedding_strategy.py  nemo_embedding_service.py  nemo_extraction_service.py  nemo_reranking_service.py  nemo_retriever_client.py  nvidia_build_client.py  nvidia_embeddings.py  nvidia_embeddings_v2.py  openalex_client.py  paper_schema.py  pharma_utils.py  pharmaceutical_embedding_optimizer.py  pharmaceutical_processor.py  pharmaceutical_query_adapter.py  pubmed_eutils_client.py  pubmed_scraper.py  query_engine.py  rag_agent.py  ranking_filter.py  rate_limiting.py  synthesis_engine.py  vector_database.py
tests/: README_pharmaceutical_benchmarks.md  __init__.py  conftest.py  test_alert_management.py  test_baseline_metadata_validation.py  test_batch_processing.py  test_benchmark_runner_integration.py  test_cache_key_stability.py  test_cache_management.py  test_citation_formatting.py  test_classifier_validation.py  test_cli_mode_both_output.py  test_credits_monitor_enhancements.py  test_ddi_pk_processor.py  test_disclaimer_flags.py  test_document_loader.py  test_document_loader_nemo_mock.py  test_drug_canonicalization.py  test_embedding_input_type.py  test_enhanced_config_pharma_env.py  test_enhanced_pubmed_scraper.py  test_enhanced_rag_agent_integration.py  test_env.py  test_guardrails_wiring.py  test_mcp_integration.py  test_medical_guardrails.py  test_metadata_normalization.py  test_minhash_dependency_guards.py  test_mode_both_comparison.py  test_monitoring_integration.py  test_nemo_embedding_service.py  test_nemo_extraction_integration.py  test_nemo_extraction_service.py  test_nemo_retriever_client.py  test_nvidia_build_compatibility.py  test_nvidia_embeddings.py  test_paper_schema.py  test_pharma_domain_overlay.py  test_pharma_utils.py  test_pharmaceutical_benchmarks.py  (+31 more)
(+81 files in other folders)
